--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-name: Alvaro Troncoso
-theme: minima
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Alvaro Troncoso
+description: Programming Portfolio
+logo: image/logo address
